--- a/index.html
+++ b/index.html
@@ -1,9 +1,159 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="lib/index.js"></script>
-  </head>
-  <body>
-    <my-element></my-element>
-  </body>
+
+<head>
+  <script src="lib/index.js"></script>
+  <style>
+    * {
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    }
+
+    ;
+  </style>
+</head>
+
+<body>
+  <my-element variant="outline-secondary"></my-element>
+  <alert-element>
+    <my-element>HELLO WORLD</my-element>
+  </alert-element>
+  <footer-element links='[
+  {
+      "title": "Column 1",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  },
+  {
+      "title": "Column 2",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  },
+  {
+      "title": "Column 3",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  },
+  {
+      "title": "Column 4",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  },
+  {
+      "title": "Column 5",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  },
+  {
+      "title": "Column 6",
+      "links" : [
+          {
+              "href": "#1",
+              "label": "About Us"
+          },
+          {
+              "href": "#2",
+              "label": "This is a super long link"
+          },
+          {
+              "href": "#3",
+              "label": "Test"
+          },
+          {
+              "href": "#4",
+              "label": "Test"
+          }
+      ]
+  }
+]' 
+description="this is a prop description" 
+title="Singapore Government Design System"
+copyrights="© 2022 Government of Singapore"
+lastUpdated="08 Feb 2022"
+>
+<footer-top-element slot="description">This is a slotted description</footer-top-element>
+  </footer-element> 
+
+  <sidenav-element></sidenav-element>
+</body>
+
 </html>
