--- a/index.html
+++ b/index.html
@@ -2,158 +2,78 @@
 <html>
 
 <head>
-  <script src="lib/index.js"></script>
-  <style>
-    * {
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    }
+    <script src="lib/index.js"></script>
+    <link href='https://v2dev.designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
+    <style>
 
-    ;
-  </style>
+        col-element {
+            border: 1px red solid;
+        }
+
+        container-element {
+            border: 1px blue solid;
+        }
+
+        * {
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+
+        ;
+    </style>
 </head>
 
 <body>
-  <my-element variant="outline-secondary"></my-element>
-  <alert-element>
-    <my-element>HELLO WORLD</my-element>
-  </alert-element>
-  <footer-element links='[
-  {
-      "title": "Column 1",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  },
-  {
-      "title": "Column 2",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  },
-  {
-      "title": "Column 3",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  },
-  {
-      "title": "Column 4",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  },
-  {
-      "title": "Column 5",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  },
-  {
-      "title": "Column 6",
-      "links" : [
-          {
-              "href": "#1",
-              "label": "About Us"
-          },
-          {
-              "href": "#2",
-              "label": "This is a super long link"
-          },
-          {
-              "href": "#3",
-              "label": "Test"
-          },
-          {
-              "href": "#4",
-              "label": "Test"
-          }
-      ]
-  }
-]' 
-description="this is a prop description" 
-title="Singapore Government Design System"
-copyrights="© 2022 Government of Singapore"
-lastUpdated="08 Feb 2022"
->
-<footer-top-element slot="description">This is a slotted description</footer-top-element>
-  </footer-element> 
+    <div class="container-fluid">
+        <div class="row row-cols-3">
+            <alert-element class="col"></alert-element>
+            <alert-element class="col"></alert-element>
+            <alert-element class="col"></alert-element>
+            <alert-element class="col"></alert-element>
+        </div>
+    </div>
+    <container-element classes="container-fluid">
+        <row-element classes="row row-cols-4">
+            <col-element>
+                <alert-element>
+                    <row-element>
+                        <col-element class="col-6">
+                            <button-element>HELLO WORLD</button-element>
+                        </col-element>
+                        <col-element>
+                            <button-element>HELLO WORLD</button-element>
+                        </col-element>
+                        <col-element>
+                            <button-element>HELLO WORLD</button-element>
+                        </col-element>
 
-  <sidenav-element></sidenav-element>
+                    </row-element>
+                </alert-element>
+             </col-element>
+            <col-element>
+                <alert-element>
+                    <button-element>HELLO WORLD</button-element>
+                </alert-element>
+            </col-element>
+            <col-element>
+                <alert-element>
+                    <button-element>HELLO WORLD</button-element>
+                </alert-element>
+            </col-element>
+            <col-element class="col-6">
+                <alert-element>
+                    <button-element>HELLO WORLD</button-element>
+                </alert-element>
+            </col-element>
+        </row-element>
+    </container-element>
+
+    <footer-element classes="" description="this is a prop description" title="Singapore Government Design System"
+        copyrights="© 2022 Government of Singapore" lastUpdated="08 Feb 2022">
+        <footer-top-element classes=""></footer-top-element>
+    </footer-element>
+
+    <sidenav-element></sidenav-element>
+
 </body>
 
 </html>
