attempt to add storybook

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="lib/cjs/index.js"></script>
+    <script src="lib/index.js"></script>
     <link href='https://v2dev.designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
     <style>
 
