setup storybook complete

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 <body>
     <div class="container-fluid">
         <div class="row row-cols-3">
-            <alert-element class="col"></alert-element>
+            <alert-element class="col-6"></alert-element>
             <alert-element class="col"></alert-element>
             <alert-element class="col"></alert-element>
             <alert-element class="col"></alert-element>
         </div>
     </div>
     <container-element classes="container-fluid">
-        <row-element classes="row row-cols-4">
+        <row-element classes="row row-cols-6">
             <col-element>
                 <alert-element>
                     <row-element>
                         <col-element class="col-6">
-                            <button-element>HELLO WORLD</button-element>
+                            <button-element variant="secondary">HELLO WORLD</button-element>
                         </col-element>
                         <col-element>
                             <button-element>HELLO WORLD</button-element>
