--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="lib/index.js"></script>
-    <link href='https://v2dev.designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
+    <link href='https://designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
     <style>
 
         col-element {
@@ -23,57 +23,14 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row row-cols-3">
-            <alert-element class="col-6"></alert-element>
-            <alert-element class="col"></alert-element>
-            <alert-element class="col"></alert-element>
-            <alert-element class="col"></alert-element>
-        </div>
-    </div>
-    <container-element classes="container-fluid">
-        <row-element classes="row row-cols-6">
-            <col-element>
-                <alert-element>
-                    <row-element>
-                        <col-element class="col-6">
-                            <button-element variant="secondary">HELLO WORLD</button-element>
-                        </col-element>
-                        <col-element>
-                            <button-element>HELLO WORLD</button-element>
-                        </col-element>
-                        <col-element>
-                            <button-element>HELLO WORLD</button-element>
-                        </col-element>
-
-                    </row-element>
-                </alert-element>
-             </col-element>
-            <col-element>
-                <alert-element>
-                    <button-element>HELLO WORLD</button-element>
-                </alert-element>
-            </col-element>
-            <col-element>
-                <alert-element>
-                    <button-element>HELLO WORLD</button-element>
-                </alert-element>
-            </col-element>
-            <col-element class="col-6">
-                <alert-element>
-                    <button-element>HELLO WORLD</button-element>
-                </alert-element>
-            </col-element>
-        </row-element>
-    </container-element>
-
-    <footer-element classes="" description="this is a prop description" title="Singapore Government Design System"
+    
+    <button-element>Hello World</button-element>
+    <footer-element classes="fixed-bottom" description="this is a prop description" title="Singapore Government Design System"
         copyrights="© 2022 Government of Singapore" lastUpdated="08 Feb 2022">
         <footer-top-element classes=""></footer-top-element>
     </footer-element>
 
-    <sidenav-element></sidenav-element>
-
+    
 </body>
 
 </html>
