test(footer): Footer UT

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script src="lib/index.js"></script>
     <link href='https://designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
     <style>
-
         col-element {
             border: 1px red solid;
         }
@@ -17,20 +16,143 @@
         * {
             font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         }
-
-        ;
     </style>
 </head>
 
 <body>
-    
     <button-element>Hello World</button-element>
-    <footer-element classes="fixed-bottom" description="this is a prop description" title="Singapore Government Design System"
-        copyrights="© 2022 Government of Singapore" lastUpdated="08 Feb 2022">
-        <footer-top-element classes=""></footer-top-element>
+    <footer-element class="fixed-bottom" description="this is a prop description"
+        title="Singapore Government Design System" lastUpdatedDate="08 Feb 2022" links='[
+        {
+            "title": "Column 1",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        },
+        {
+            "title": "Column 2",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        },
+        {
+            "title": "Column 3",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        },
+        {
+            "title": "Column 4",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        },
+        {
+            "title": "Column 5",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        },
+        {
+            "title": "Column 6",
+            "links" : [
+                {
+                    "href": "#1",
+                    "label": "About Us"
+                },
+                {
+                    "href": "#2",
+                    "label": "This is a super long link"
+                },
+                {
+                    "href": "#3",
+                    "label": "Test"
+                },
+                {
+                    "href": "#4",
+                    "label": "Test"
+                }
+            ]
+        }
+      ]'>
     </footer-element>
 
-    
+
 </body>
 
 </html>
