--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,2 @@
 <link href='https://designsystem.gov.sg/css/sgds.css' rel='stylesheet' type='text/css' />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet' type='text/css' />
