feat(masthead): add masthead

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
+    <masthead-element></masthead-element>
     <button-element class="flex-grow-1">Hello World</button-element>
     <footer-element description="this is a prop description" title="Singapore Government Design System"
         lastUpdatedDate="08 Feb 2022" links='[
