--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         footer-element::part(footer-bottom) {
-           background-color: red;
+            background-color: red;
         }
 
         /* body {
@@ -30,8 +30,32 @@
     </style>
 </head>
 
-<body class="d-flex flex-column min-vh-100">
-    <button-element class="flex-grow-1">Hello World</button-element>
+<body class="d-flex flex-column min-vh-100 ">
+    <div class="container">
+        <!-- <nav-element></nav-element> -->
+        <br />
+        <sidenav-element class="mt-3" id="test-id">
+            <sidenav-item menuLinks='[{"href": "#1", "itemName": "first-item"},
+                {"href": "#2", "itemName": "second-item"}]'>
+                <span slot="title">Test Button</span>
+                <!-- <sidenav-button>test button</sidenav-button> -->
+
+            </sidenav-item>
+            <!-- <sidenav-item menuLinks='[{"href": "#1", "itemName": "first-item"},
+                {"href": "#2", "itemName": "second-item"}]'>
+                <span slot="title">Test Button</span>
+
+            </sidenav-item>
+            <sidenav-item>
+                <span slot="title">Test Button</span>
+
+            </sidenav-item> -->
+
+        </sidenav-element>
+        <br />
+        <button-element class="flex-grow-1">Hello World</button-element>
+    </div>
+
     <footer-element description="this is a prop description" title="Singapore Government Design System"
         lastUpdatedDate="08 Feb 2022" links='[
         {
@@ -183,7 +207,6 @@
         }
       ]'>
     </footer-element>
-
 
 </body>
 
