feat(sidenav): add sidenav close open interactivity

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='node_modules/clk-styletest/css/sgds.helpers.css' rel='stylesheet' type='text/css' />
     <link href='node_modules/clk-styletest/css/sgds.grid.css' rel='stylesheet' type='text/css' />
     <link href='node_modules/clk-styletest/css/sgds.positions.css' rel='stylesheet' type='text/css' />
-    <link href='node_modules/clk-styletest/css/sgds.css' rel='stylesheet' type='text/css' />
+    <!-- <link href='node_modules/clk-styletest/css/sgds.css' rel='stylesheet' type='text/css' /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
         type='text/css' />
     <style>
@@ -38,13 +38,21 @@
                 <sidenav-link href="https://google.com" active>first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
-
             </sidenav-item>
             <sidenav-item visible id="sidenav2" collapseId="collapseTwo" title="Test title 2">
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
 
+            </sidenav-item>
+            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2">
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
+                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+            </sidenav-item>
+            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2" href="#">
+            </sidenav-item>
+            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2" href="#">
             </sidenav-item>
         </sidenav-element>
         <br />
