style(sidenav): match stylings to sgds

--- a/index.html
+++ b/index.html
@@ -34,25 +34,30 @@
     <div class="container">
         <br />
         <sidenav-element class="mt-3" id="test-id">
-            <sidenav-item id="sidenav1" collapseId="collapseOne" title="Test title 1">
+            <sidenav-item active>
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com" active>first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
             </sidenav-item>
-            <sidenav-item visible id="sidenav2" collapseId="collapseTwo" title="Test title 2">
+            <sidenav-item visible title="Test title 2">
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
 
             </sidenav-item>
-            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2">
+            <sidenav-item title="Test title 2">
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
             </sidenav-item>
-            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2" href="#">
+            <sidenav-item title="Test title 2" href="#">
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
             </sidenav-item>
-            <sidenav-item id="sidenav2" collapseId="collapseTwo" title="Test title 2" href="#">
+            <sidenav-item title="Test title 2" href="#">
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
             </sidenav-item>
         </sidenav-element>
         <br />
