--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <br />
         <sidenav-element class="mt-3" id="test-id">
             <sidenav-item active>
-                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
+                <span slot="title"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
+                    <path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
+                  </svg></i>Title</span>
                 <sidenav-link href="https://google.com" active>first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
