test(sidenav): wip unit test for sidenav-element -link -item

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
             </sidenav-item>
-            <sidenav-item visible title="Test title 2">
-                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
+            <sidenav-item title="Test title 2" active >
+                <!-- <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+                <sidenav-link href="https://google.com" >first-test</sidenav-link> -->
 
             </sidenav-item>
             <sidenav-item title="Test title 2">
