--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
             </sidenav-item>
             <sidenav-item title="Test title 2" active >
-                <!-- <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
+                <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
                 <sidenav-link href="https://google.com" >first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link> -->
+                <sidenav-link href="https://google.com" >first-test</sidenav-link>
 
             </sidenav-item>
             <sidenav-item title="Test title 2">
