style(sidenav): add css custom properties to customise color and font size

--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         footer-element::part(footer-bottom) {
             background-color: red;
         }
+        /* sidenav-item::part(sidenav-btn) {
+            color: red;
+            border-left-color: red;
+        }
+        sidenav-link::part(sidenav-anchor) {
+            color: red;
+        } */
 
+        sidenav-item {
+            --sidenav-theme-color: orange;
+            /* --sidenav-font-size: 40rem; */
+        }
         /* body {
             display: flex;
             min-height: 100vh;
