--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- <link href='node_modules/clk-styletest/css/sgds.css' rel='stylesheet' type='text/css' /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
         type='text/css' />
+        <script data-shoelace="node_modules/@shoelace-style/shoelace/dist"></script>
+        <script type="module" src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"></script>
+
+        <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
     <style>
         * {
             font-family: "bootstrap-icons", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -18,6 +22,7 @@
         footer-element::part(footer-bottom) {
             background-color: red;
         }
+
         /* sidenav-item::part(sidenav-btn) {
             color: red;
             border-left-color: red;
@@ -30,6 +35,7 @@
             --sidenav-theme-color: orange;
             /* --sidenav-font-size: 40rem; */
         }
+
         /* body {
             display: flex;
             min-height: 100vh;
@@ -46,25 +52,25 @@
         <br />
         <sidenav-element class="mt-3" id="test-id">
             <sidenav-item active>
-                <span slot="title"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
-                    <path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
-                  </svg></i>Title</span>
+                <span slot="title"> <sl-icon name="stack"></sl-icon> Title
+
+                </span>
                 <sidenav-link href="https://google.com" active>first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
             </sidenav-item>
-            <sidenav-item title="Test title 2" active >
+            <sidenav-item title="Test title 2" active>
                 <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
 
             </sidenav-item>
             <sidenav-item title="Test title 2">
                 <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
                 <sidenav-link href="https://google.com">first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
-                <sidenav-link href="https://google.com" >first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
+                <sidenav-link href="https://google.com">first-test</sidenav-link>
             </sidenav-item>
             <sidenav-item title="Test title 2" href="#">
                 <span slot="title"> <i class="bi bi-1-circle"></i>Title</span>
