--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
     <link href='node_modules/@govtechsg/sgds/css/sgds.util.css' rel='stylesheet' type='text/css' />
+    <link href='node_modules/@govtechsg/sgds/css/sgds.css' rel='stylesheet' type='text/css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
         type='text/css' />
     <script data-shoelace="node_modules/@shoelace-style/shoelace/dist"></script>
@@ -51,6 +52,12 @@
 
 <body class="d-flex flex-column min-vh-100">
     <masthead-element></masthead-element>
+     
+    <mainnav-element>
+        <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand"/>
+        <mainnav-item href="#">Home</mainnav-item>
+        <mainnav-item href="#">About</mainnav-item>
+        </mainnav-element>                
     <div class="container">
         <br />
         <sidenav-element class="mt-3" id="test-id">
