--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
 
     <link href='node_modules/@govtechsg/sgds/css/sgds.util.css' rel='stylesheet' type='text/css' />
-    <link href='node_modules/@govtechsg/sgds/css/sgds.css' rel='stylesheet' type='text/css' />
+    <!-- <link href='node_modules/@govtechsg/sgds/css/sgds.css' rel='stylesheet' type='text/css' /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel='stylesheet'
         type='text/css' />
     <script data-shoelace="node_modules/@shoelace-style/shoelace/dist"></script>
     <script type="module" src="node_modules/@shoelace-style/shoelace/dist/components/icon/icon.js"></script>
-
+    <script
+    type="module"
+    id="dev-console-gateway"
+    src="https://assets.developer.tech.gov.sg/bundled-scripts/dev-console-gateway.bundle.js"
+  ></script>
     <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.83/dist/shoelace.js"></script> -->
     <style>
         * {
@@ -37,27 +41,22 @@
             --sgds-masthead-crest-color: white;
             --sgds-masthead-text-color: red;
         }
-
-        /* body {
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
-        }
-        button-element{
-            flex: 1;
-        } */
     </style>
     <script src="lib/index.js"></script>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
     <masthead-element></masthead-element>
-     
-    <mainnav-element>
-        <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand"/>
+
+    <mainnav-element expand="always">
+        <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
+
         <mainnav-item href="#">Home</mainnav-item>
         <mainnav-item href="#">About</mainnav-item>
-        </mainnav-element>                
+        <!-- <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget> -->
+
+    </mainnav-element>
+
     <div class="container">
         <br />
         <sidenav-element class="mt-3" id="test-id">
