feat(mainnav): use resize observer to detect and update component size change for responsivieness

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <masthead-element></masthead-element>
+    <!-- <masthead-element></masthead-element> -->
 
-    <mainnav-element expand="always">
+    <mainnav-element expand="never">
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
         <mainnav-item href="#">Home</mainnav-item>
         <mainnav-item href="#">About</mainnav-item>
-        <!-- <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget> -->
+        <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
 
     </mainnav-element>
 
