--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             --sgds-masthead-crest-color: white;
             --sgds-masthead-text-color: red;
         }
+        mainnav-item {
+            --mainnav-item-theme-color:red;
+        }
     </style>
     <script src="lib/index.js"></script>
 </head>
@@ -48,7 +51,7 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- <masthead-element></masthead-element> -->
 
-    <mainnav-element expand="never">
+    <mainnav-element expand="always">
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
         <mainnav-item href="#">Home</mainnav-item>
