--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- <masthead-element></masthead-element> -->
 
-    <mainnav-element expand="always">
+    <mainnav-element expand="lg">
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
         <mainnav-item href="#">Home</mainnav-item>
         <mainnav-item href="#">About</mainnav-item>
         <dev-console-widget slot="non-collapsible" iconColor="black" iconWidth="28px" iconHeight="28px"></dev-console-widget>
-
     </mainnav-element>
 
     <div class="container">
