test(mainnav): add test for mainnav-element and mainnav-item

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- <masthead-element></masthead-element> -->
 
-    <mainnav-element expand="lg">
+    <mainnav-element expand="never" mode="offcanvas">
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
 
         <mainnav-item href="#">Home</mainnav-item>
