test(button): more unit tests

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <button-element variant="outline-secondary"><span slot="label">Outline</span></button-element>
                     <button-element variant="success" disabled><span slot="label">Disabled</span></button-element>
                     <button-element variant="success" href="#"><span slot="label">Link button</span></button-element>
-                    <button-element variant="danger" href="#" target="_blank">
+                    <button-element variant="warning" href="#" target="_blank" disabled>
                         <span slot="label">Link button _blank</span>
                     </button-element>
                     <button-element variant="danger" download="logo.svg">
