feat(button): add sizes, active state

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <p>Button size</p>
             <div class="row">
                 <div class="grid">
-                    <button-element class="btn-sm" variant="primary"><span slot="label">Hello World</span></button-element>
-                    <button-element class="btn" variant="primary"><span slot="label">Hello World</span></button-element>
-                    <button-element class="btn-lg" variant="primary"><span slot="label">Hello World</span></button-element>
+                    <button-element size="sm" variant="primary"><span slot="label">Hello World</span></button-element>
+                    <button-element variant="primary" active><span slot="label">Hello World</span></button-element>
+                    <button-element size="lg" variant="primary"><span slot="label">Hello World</span></button-element>
                 </div>
             </div>
         </div>
